<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:weightSum="20">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:paddingHorizontal="10dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/app_username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_fade" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:paddingHorizontal="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:ems="10"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white_fade" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:text="@string/app_login_forgot"
        android:textAlignment="textEnd"
        android:textColor="@color/white_fade"
        android:layout_marginHorizontal="50dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:text="@string/app_login" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white_fade"
        android:text="@string/app_login_create" />
</LinearLayout>