<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendCodeToEmailActivity"
    android:orientation="vertical"
    android:weightSum="20">

    <ImageView
        android:id="@+id/getcode_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/getcode_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/app_getcode_forgot"
        android:layout_marginHorizontal="50dp" />

    <TextView
        android:id="@+id/getcode_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/app_getcode_instruction"
        android:layout_marginHorizontal="50dp" />

    <EditText
        android:id="@+id/getcode_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/app_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_fade" />

    <Button
        android:id="@+id/getcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:text="@string/app_getcode_reset" />
</LinearLayout>