<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:weightSum="20">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_weight="8"
        android:contentDescription="@string/app_logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/app_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_fade" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/app_username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_fade" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:ems="10"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_fade" />

    <TextView
        android:id="@+id/register_password_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/white_fade"
        android:textSize="12sp"
        android:text="@string/app_password_desc"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="40dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="2"
        android:text="@string/app_register" />
</LinearLayout>