<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/addGroupTitle"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:text="@string/app_add_group"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/addGroupSubTitle"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/app_add_title"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/addGroupName"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/lightgray"
            android:hint="@string/app_add_form1"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/addGroupCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/lightgray"
            android:hint="@string/app_add_form2"
            android:inputType="text"
            android:padding="15dp" />


        <EditText
            android:id="@+id/addGroupCourses"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/lightgray"
            android:hint="@string/app_add_form3"
            android:inputType="text"
            android:padding="15dp" />

        <SearchView
            android:id="@+id/searchUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/lightgray"
            android:gravity="center"
            android:iconifiedByDefault="false"
            android:textColor="@color/white"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/app_add_form4" />

        <Button
            android:id="@+id/addGroupBtn"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:text="@string/app_add_group" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>