<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exploreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/explore_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coursesBtn"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/explore_coursesBtnText"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestsBtn" />

    <Button
        android:id="@+id/interestsBtn"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/explore_interestsBtnText"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exploreText" />

    <Button
        android:id="@+id/nameBtn"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/explore_nameBtnText"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupsBtn" />

    <Button
        android:id="@+id/groupsBtn"
        android:layout_width="134dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/explore_groupsBtnText"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesBtn" />




</androidx.constraintlayout.widget.ConstraintLayout>