<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="36">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="20"
        android:layout_weight="15">

        <ImageView
            android:id="@+id/profilePicEdit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:background="@drawable/picture_background"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/picture_foreground" />

        <ImageButton
            android:id="@+id/profilePicEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_marginTop="20dp"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16dp"
        android:text="@string/interest_and_course"
        android:textColor="@color/white"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/addInterestTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@color/lightgray"
            android:hint="@string/interest_add"
            android:textColor="@color/black"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/white_fade"
            android:layout_weight="5" />

        <ImageButton
            android:id="@+id/addInterestBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_add_circle_24"
            android:layout_weight="2"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/interests"
        android:layout_width="match_parent"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:layout_weight="15"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginHorizontal="75dp"
        android:text="@string/app_profile_save"
        android:layout_weight="2"
        android:textAllCaps="false" />

 </LinearLayout>